@startuml
!include ../../StylesForDiagrams.puml

title EXPECTATION
package cleanmovie as "com.vanskarner.cleanmovie"{
    class FavoritesPresenter
}
package movie as "com.vanskarner.movie"{
    interface MovieServices<<interface>>
    class MovieDefaultServices classNotVisible
    interface MovieLocalRepository<<interface>> classNotVisible
    class FindFavoriteMovieUseCase classNotVisible
    class MovieLocalRxRepository classNotVisible

    MovieServices <|.. MovieDefaultServices
    MovieDefaultServices --> FindFavoriteMovieUseCase
    FindFavoriteMovieUseCase --> MovieLocalRepository
    MovieLocalRepository <|.. MovieLocalRxRepository
}

FavoritesPresenter ..> MovieServices: <<use>>

skinparam titleFontColor #green

hide members
@enduml